# NoTasteRequired

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  config_defaults.py  dependencies.py  main.py  models.py
app/agents/: __init__.py  designer.py  orchestrator.py  planner.py  reviewer.py
app/api/: routes.py
app/services/: browser_exec.py  memory.py  session_store.py  tracing.py  turn_parser.py  validation.py
app/ui/static/: chat-adapter.js  chat-template.css  chat-template.js
app/ui/templates/: index.html
app/workflow/: engine.py
docs/: api_contract.md  architecture.md  operational_limits.md
