[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notasterequired"
version = "0.1.0"
description = "NoTasteRequired rebuild with FastAPI + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "NoTasteRequired Team" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "sse-starlette>=2.1.3",
  "pydantic-settings>=2.6.1",
  "langgraph>=1.0.8",
  "langchain-groq>=1.1.0",
  "python-dotenv>=1.0.1",
  "browser-use==0.11.13",
  "playwright>=1.47.0",
  "pyyaml>=6.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

